<resources>
    <string name="app_name">极简Tik</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="authorize_web">通过web页授权</string>
    <string name="open_system_photo">打开系统相册并分享</string>
    <string name="share_to_aweme">启动分享</string>
    <string name="set_default_title">设置默认话题</string>
    <string name="media_path">路径</string>

    <string name="add_photo_video">添加相片或视频</string>
    <string name="clear">清空</string>
    <string name="image">照片</string>
    <string name="video">视频</string>
    <string name="auth_success">授权成功</string>
    <string name="share_success">分享成功</string>
    <string name="scope_hint">必选权限(以 , 号间隔)</string>
    <string name="optional_scope">可选权限，默认不选（以 , 号间隔)</string>
    <string name="optional_1_scope">可选权限，默认选择（以 , 号间隔)</string>
    <string name="set_scope_btn">设置</string>

    <string name="share_to_aweme_with_shareid_no_callbacK">启动带shareId无回调</string>
    <string name="share_to_aweme_with_shareid_callback">启动带shareId有回调</string>
    <string name="share_user_file_provider">使用FileProvider=</string>

    <string name="title_movie">抖音电影榜</string>
    <string name="toolbar_bio">Bio</string>
    <string name="toolbar_details">Details</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">电影</string>
    <string name="title_dashboard">电视剧</string>
    <string name="title_notifications">综艺</string>
    <string name="title_update_time">2022.8.18 22:58 更新</string>

    <string name="rank_test_title">独行月球</string>
    <string name="rank_test_score">导演：张吃鱼</string>
    <string name="rank_test_type">喜剧/科幻</string>
    <string name="rank_test_up_time">2022–07–29 上映</string>
    <string name="rank_test_hot_level">热度：1221.7万</string>
    <string name="title_activity_main2">MainActivity2</string>

    <!-- 点赞选中 -->
    <string name="icon_like_fill">&#xe60d;</string>
    <!--评论-->
    <string name="icon_comment">&#xe621;</string>
    <!-- 微博 -->
    <string name="icon_weibo">&#xe620;</string>
    <!-- 微信 -->
    <string name="icon_wechat">&#xe61d;</string>
    <!-- 微信朋友圈 -->
    <string name="icon_friends">&#xe61c;</string>
    <!-- QQ -->
    <string name="icon_qq">&#xe61e;</string>
    <!-- QQ空间 -->
    <string name="icon_qq_space">&#xe61f;</string>
    <!-- 更多 -->
    <string name="icon_more">&#xe61b;</string>
    <!-- 地理位置 -->
    <string name="icon_location_fill">&#xe624;</string>

    <string name="trans">trans</string>
</resources>