<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"

    android:background="@color/gray"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/img_item_card"
        android:layout_width="2dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="8dp"
        android:layout_weight="20"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_gravity="center"

            android:scaleType="fitXY"
            android:src="@mipmap/test" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_weight="55"
        android:orientation="vertical">

        <TextView
            android:id="@+id/info_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:text="@string/rank_test_title"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info_en_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:text="@string/rank_test_score"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/info_director"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:text="@string/rank_test_score"
            android:textColor="@color/orange"
            android:textSize="12sp"></TextView>

        <TextView
            android:id="@+id/info_tags"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:text="@string/rank_test_type"
            android:textColor="@color/orange"
            android:textSize="12sp"></TextView>

        <TextView
            android:id="@+id/info_date"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:text="@string/rank_test_up_time"
            android:textColor="@color/orange"
            android:textSize="12sp"></TextView>

        <TextView
            android:id="@+id/info_hot"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:text="@string/rank_test_hot_level"
            android:textColor="@color/orange"
            android:textSize="12sp">

        </TextView>


    </LinearLayout>

</LinearLayout>